--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-  - cron: '00 23 * * *'
+  - cron: ''
 
 env:
   ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"
